# PhisHGMAE

./: .gitignore  README.md  README_zh.md  configs.yml  evaluate_phishgmae.py  main.py  pyproject.toml
data/phishscope/phishscope_part0/: fr.txt  fu.txt  labels.npy  masked_uwu_1.npz  nei_f.npy  nei_r.npy  nei_w.npy  test_10.npy  test_20.npy  test_40.npy  train_10.npy  train_20.npy  train_40.npy  u_urlnet_feat.npy  u_urlnet_feat_old.npy  uwu.npz  val_10.npy  val_20.npy  val_40.npy  wu.txt
data/phishscope/phishscope_part1/: fr.txt  fu.txt  labels.npy  masked_uwu_1.npz  nei_f.npy  nei_r.npy  nei_w.npy  test_10.npy  test_20.npy  test_40.npy  train_10.npy  train_20.npy  train_40.npy  train_labels_40.npy  u_urlnet_feat.npy  uwu.npz  val_10.npy  val_20.npy  val_40.npy  wu.txt
data/phishscope/phishscope_part2/: fr.txt  fu.txt  labels.npy  masked_uwu_1.npz  nei_f.npy  nei_r.npy  nei_w.npy  test_10.npy  test_20.npy  test_40.npy  train_10.npy  train_20.npy  train_40.npy  u_urlnet_feat.npy  uwu.npz  val_10.npy  val_20.npy  val_40.npy  wu.txt
data/phishscope/phishscope_part3/: fr.txt  fu.txt  labels.npy  masked_uwu_1.npz  nei_f.npy  nei_r.npy  nei_w.npy  test_10.npy  test_20.npy  test_40.npy  train_10.npy  train_20.npy  train_40.npy  train_labels_10.npy  train_labels_20.npy  u_urlnet_feat.npy  uwu.npz  val_10.npy  val_20.npy  val_40.npy  wu.txt
data/phishscope/phishscope_part4/: fr.txt  fu.txt  labels.npy  nei_f.npy  (+15 more)
hgmae/models/: edcoder.py
hgmae/utils/: load_data.py
models/: edcoder.py  gat.py  han.py
utils/: evaluate.py  load_data.py  misc.py  params.py  utils.py
