[project]
name = "phishgmae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch==2.3.1",
    "torch-geometric==2.6.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
]

[tool.setuptools.packages.find]
exclude = ["logs*", "data*", "models*", "results*", "embeddings*"]
